# cycling-analysis

./: .gitignore  README.md  app.py  fantasy-data-raw.json  fantasy-data.json  main.py  pcs_data_cache.json  pcs_startlist_cache.json  pyproject.toml  pyrightconfig.json  race_data_cache.json  requirements.txt  scrape.js  tdf_femmes_2025_startlist.json
components/: __init__.py  rider_display.py  sidebar.py  tabs.py  visualizations.py
components/analytics/: __init__.py  insights.py  main.py  outliers.py
components/charts/: __init__.py  overview.py  performance.py  stage_performance.py  team_analysis.py  value_analysis.py
components/common/: __init__.py  calculations.py  formatting.py  pagination.py
components/display/: __init__.py  performance.py  rider_cards.py  rider_info.py  rider_tables.py  summary_stats.py
components/filtering/: __init__.py  controls.py  filters.py  search.py
components/layout/: __init__.py  sidebar.py  tabs.py
config/: settings.py  styling.py
data/: __init__.py  analytics.py  analytics_api.py  fantasy_data.py  loaders.py  matching.py  pcs_data.py  pipeline.py  race_data.py
data/models/: __init__.py  combined_analytics.py  race.py  rider.py  unified.py
data/processors/: __init__.py  combined_rider_analytics.py  matching.py  race_analytics.py  rider_analytics.py
data/sources/: __init__.py  fantasy.py  pcs_api.py  race_api.py
utils/: cache_manager.py  name_formatter.py  name_utils.py  url_patterns.py
