[project]
name = "fantasy-stats"
version = "0.1.0"
description = "A site that compiles and performs analysis on cycling data"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "streamlit",
  "procyclingstats",
  "numpy",
  "pandas",
  "plotly",
  "statsmodels",
  "scipy"
]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]

[dependency-groups]
dev = [
    "ruff>=0.12.7",
]
